k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: refael-nodejs
spec:
  replicas: 2
  selector:
    matchLabels:
      app: refael-nodejs
  template:
    metadata:
      labels:
        app: refael-nodejs
    spec:
      containers:
        - name: refael
          image: refael-app:local
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080

          readinessProbe:
            httpGet:
              path: /ready
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /live
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3

          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
