k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: refael-nodejs
spec:
  selector:
    app: refael-nodejs
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
